javascript basics updated

--- a/javascriptBasics/index.html
+++ b/javascriptBasics/index.html
@@ -9,6 +9,6 @@
     
     <div>Javascript Basics required for React </div>
 
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body> 
 </html>
